Progression dans la refonte

--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,103 +1,99 @@
 <div class="py-6">
   <!-- Page title -->
-  <div class="">
+  <div class="text-white">
     <h2>Accueil</h2>
   </div>
-  <div class="page-body">
-    <div class="container-xl">
-      <p-card
-        header="Actualités"
-        styleClass="rounded-md bg-white/10 backdrop-blur-xl shadow-lg ring-1 ring-black/10">
-        <div>
-          <div class="text-muted">jeudi 01 juin 2023</div>
+  <p-card
+    header="Actualités"
+    styleClass="rounded-md bg-white/0 backdrop-blur-[96px] shadow-lg ring-1 ring-black/20">
+    <div>
+      <div class="text-muted">jeudi 01 juin 2023</div>
 
-          <h2>Joyeux mois des fiertés tout le monde ! 🏳️‍🌈</h2>
+      <h2>Joyeux mois des fiertés tout le monde ! 🏳️‍🌈</h2>
 
-          <p>
-            Beat Saber FR s'habille également des couleurs RGB car on est des
-            GAYmers avant tout 😎
-          </p>
-          <p>
-            <strong>&#64;Ralex</strong> a mis à jour les sabres BSFR pour
-            l'occasion !
-          </p>
+      <p>
+        Beat Saber FR s'habille également des couleurs RGB car on est des
+        GAYmers avant tout 😎
+      </p>
+      <p>
+        <strong>&#64;Ralex</strong> a mis à jour les sabres BSFR pour
+        l'occasion !
+      </p>
 
-          <a
-            pButton
-            pRipple
-            href="/static/sabers/BSFR_Saber_v1.4_Rainbow.saber"
-            class="no-underline text-[var(--text-color)]">
-            <span [innerHTML]="icons.download | svg" class="me-3"></span>
-            BSFR_Saber_v1.4_Rainbow.saber
-          </a>
-        </div>
-        <p-divider type="dashed" />
-        <div>
-          <div class="text-muted">samedi 22 avril 2023</div>
-
-          <h2>BSFR Saber v1.4</h2>
-
-          <u>Changelog :</u>
-          <ul>
-            <li>La tour Eiffel apparaît maintenant plus loin</li>
-            <li>Le poids du fichier a été réduit</li>
-          </ul>
-
-          <a
-            pButton
-            pRipple
-            href="/static/sabers/BSFR_Saber_v1.4.saber"
-            class="no-underline text-[var(--text-color)]">
-            <span [innerHTML]="icons.download | svg" class="me-3"></span>
-            BSFR_Saber_v1.4.saber
-          </a>
-        </div>
-        <p-divider type="dashed" />
-        <div>
-          <div class="text-muted">mardi 10 janvier 2023</div>
-
-          <h2>Publication de run Beat Saber</h2>
-
-          Les joueurs Quest ont désormais la possibilité de soumettre des runs
-          depuis le formulaire de publication de run !
-        </div>
-        <p-divider type="dashed" />
-        <div>
-          <div class="text-muted">samedi 15 octobre 2022</div>
-
-          <h2>BSFR Saber !</h2>
-
-          <p>
-            Heyow tout le monde !<br />
-            <br />
-            Après quelque temps passé à élaborer les sabres, nous avons le
-            plaisir de vous présenter les sabres BSFR !<br />
-            Ils ont été créés par notre cher <strong>&#64;Ralex</strong> ! Merci
-            encore à toi &lt;3
-          </p>
-
-          <a
-            pButton
-            pRipple
-            href="/static/sabers/BSFR_Saber_v1.1.saber"
-            class="no-underline text-[var(--text-color)]">
-            <span [innerHTML]="icons.download | svg" class="me-3"></span>
-            BSFR_Saber_v1.1.saber
-          </a>
-        </div>
-        <p-divider type="dashed" />
-        <div>
-          <div class="text-muted">vendredi 6 Août 2022</div>
-
-          <h2>Multi POV BSFR #3</h2>
-
-          <p>
-            Les soumissions de run pour le Multi POV #3 sont ouvertes !<br />
-            Vous avez jusqu'au vendredi 16 décembre 23h00 pour nous faire
-            parvenir votre run.
-          </p>
-        </div>
-      </p-card>
+      <a
+        pButton
+        pRipple
+        href="/static/sabers/BSFR_Saber_v1.4_Rainbow.saber"
+        class="no-underline text-white">
+        <span [innerHTML]="icons.download | svg" class="me-3"></span>
+        BSFR_Saber_v1.4_Rainbow.saber
+      </a>
     </div>
-  </div>
+    <p-divider type="dashed" />
+    <div>
+      <div class="text-muted">samedi 22 avril 2023</div>
+
+      <h2>BSFR Saber v1.4</h2>
+
+      <u>Changelog :</u>
+      <ul>
+        <li>La tour Eiffel apparaît maintenant plus loin</li>
+        <li>Le poids du fichier a été réduit</li>
+      </ul>
+
+      <a
+        pButton
+        pRipple
+        href="/static/sabers/BSFR_Saber_v1.4.saber"
+        class="no-underline text-white">
+        <span [innerHTML]="icons.download | svg" class="me-3"></span>
+        BSFR_Saber_v1.4.saber
+      </a>
+    </div>
+    <p-divider type="dashed" />
+    <div>
+      <div class="text-muted">mardi 10 janvier 2023</div>
+
+      <h2>Publication de run Beat Saber</h2>
+
+      Les joueurs Quest ont désormais la possibilité de soumettre des runs
+      depuis le formulaire de publication de run !
+    </div>
+    <p-divider type="dashed" />
+    <div>
+      <div class="text-muted">samedi 15 octobre 2022</div>
+
+      <h2>BSFR Saber !</h2>
+
+      <p>
+        Heyow tout le monde !<br />
+        <br />
+        Après quelque temps passé à élaborer les sabres, nous avons le
+        plaisir de vous présenter les sabres BSFR !<br />
+        Ils ont été créés par notre cher <strong>&#64;Ralex</strong> ! Merci
+        encore à toi &lt;3
+      </p>
+
+      <a
+        pButton
+        pRipple
+        href="/static/sabers/BSFR_Saber_v1.1.saber"
+        class="no-underline text-white">
+        <span [innerHTML]="icons.download | svg" class="me-3"></span>
+        BSFR_Saber_v1.1.saber
+      </a>
+    </div>
+    <p-divider type="dashed" />
+    <div>
+      <div class="text-muted">vendredi 6 Août 2022</div>
+
+      <h2>Multi POV BSFR #3</h2>
+
+      <p>
+        Les soumissions de run pour le Multi POV #3 sont ouvertes !<br />
+        Vous avez jusqu'au vendredi 16 décembre 23h00 pour nous faire
+        parvenir votre run.
+      </p>
+    </div>
+  </p-card>
 </div>
