--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div
-  class="h-20 w-full px-4 grid md:grid-cols-[auto_1fr] grid-cols-[auto_1fr_auto] md:gap-8 gap-0 items-center rounded-md bg-white/10 backdrop-blur-xl shadow-lg ring-1 ring-black/10">
+  class="h-20 w-full px-4 grid md:grid-cols-[auto_1fr] grid-cols-[auto_1fr_auto] md:gap-8 gap-0 items-center rounded-md">
   <div class="">
     <a
       routerLink="/"
