--- a/src/app/components/rankedle/rankedle.component.html
+++ b/src/app/components/rankedle/rankedle.component.html
@@ -1,1 +1,10 @@
-<p>rankedle works!</p>
+<div class="py-6">
+    <!-- Page title -->
+    <div class="text-white">
+      <h2>Rankedle</h2>
+    </div>
+    <p-card
+      styleClass="rounded-md bg-white/0 backdrop-blur-[96px] shadow-lg ring-1 ring-black/20">
+
+    </p-card>
+</div>
