Progression dans la refonte

--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -16,8 +16,8 @@
         GAYmers avant tout 😎
       </p>
       <p>
-        <strong>&#64;Ralex</strong> a mis à jour les sabres BSFR pour
-        l'occasion !
+        <strong>&#64;Ralex</strong> a mis à jour les sabres BSFR pour l'occasion
+        !
       </p>
 
       <a
@@ -68,8 +68,8 @@
       <p>
         Heyow tout le monde !<br />
         <br />
-        Après quelque temps passé à élaborer les sabres, nous avons le
-        plaisir de vous présenter les sabres BSFR !<br />
+        Après quelque temps passé à élaborer les sabres, nous avons le plaisir
+        de vous présenter les sabres BSFR !<br />
         Ils ont été créés par notre cher <strong>&#64;Ralex</strong> ! Merci
         encore à toi &lt;3
       </p>
@@ -91,8 +91,8 @@
 
       <p>
         Les soumissions de run pour le Multi POV #3 sont ouvertes !<br />
-        Vous avez jusqu'au vendredi 16 décembre 23h00 pour nous faire
-        parvenir votre run.
+        Vous avez jusqu'au vendredi 16 décembre 23h00 pour nous faire parvenir
+        votre run.
       </p>
     </div>
   </p-card>
