--- a/src/app/components/multi-pov/multi-pov.component.html
+++ b/src/app/components/multi-pov/multi-pov.component.html
@@ -1,7 +1,7 @@
 <div class="py-6">
   <!-- Page title -->
   <div class="text-white">
-    <h2>Rankedle</h2>
+    <h2>Multi POV</h2>
   </div>
   <p-card
     styleClass="rounded-md bg-white/0 backdrop-blur-[96px] shadow-lg ring-1 ring-black/20">
