--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="min-h-screen grid grid-rows-[1fr_auto]">
   <div class="max-w-screen-2xl w-full mx-auto lg:p-8 p-2">
+    <app-toast />
     <app-navbar></app-navbar>
     <router-outlet></router-outlet>
   </div>
