--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -23,8 +23,7 @@
       <a
         pButton
         pRipple
-        href="/static/sabers/BSFR_Saber_v1.4_Rainbow.saber"
-        class="no-underline text-white">
+        class="no-underline text-white" outlined="true" (click)="comming()">
         <span [innerHTML]="icons.download | svg" class="me-3"></span>
         BSFR_Saber_v1.4_Rainbow.saber
       </a>
@@ -44,8 +43,7 @@
       <a
         pButton
         pRipple
-        href="/static/sabers/BSFR_Saber_v1.4.saber"
-        class="no-underline text-white">
+        class="no-underline text-white" outlined="true" (click)="comming()">
         <span [innerHTML]="icons.download | svg" class="me-3"></span>
         BSFR_Saber_v1.4.saber
       </a>
@@ -77,8 +75,7 @@
       <a
         pButton
         pRipple
-        href="/static/sabers/BSFR_Saber_v1.1.saber"
-        class="no-underline text-white">
+        class="no-underline text-white" outlined="true" (click)="comming()">
         <span [innerHTML]="icons.download | svg" class="me-3"></span>
         BSFR_Saber_v1.1.saber
       </a>
