--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -1,9 +1,11 @@
 <div class="py-6">
   <!-- Page title -->
   <div class="text-white">
-    <h2>YouTube</h2>
+    <h2>Vidéo YouTube BSFR</h2>
   </div>
   <p-card
+    header="Publier une run"
     styleClass="rounded-md bg-white/0 backdrop-blur-[96px] shadow-lg ring-1 ring-black/20">
+    
   </p-card>
 </div>
