Progression dans la refonte

--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -5,7 +5,7 @@
   </div>
   <p-card
     header="Actualités"
-    styleClass="rounded-md bg-white/0 backdrop-blur-[96px] shadow-lg ring-1 ring-black/20">
+    styleClass="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
     <div>
       <div class="text-muted">jeudi 01 juin 2023</div>
 
@@ -23,7 +23,7 @@
       <a
         pButton
         pRipple
-        class="no-underline text-white" outlined="true" (click)="comming()">
+        (click)="comming()">
         <span [innerHTML]="icons.download | svg" class="me-3"></span>
         BSFR_Saber_v1.4_Rainbow.saber
       </a>
@@ -43,7 +43,7 @@
       <a
         pButton
         pRipple
-        class="no-underline text-white" outlined="true" (click)="comming()">
+        (click)="comming()">
         <span [innerHTML]="icons.download | svg" class="me-3"></span>
         BSFR_Saber_v1.4.saber
       </a>
@@ -75,7 +75,7 @@
       <a
         pButton
         pRipple
-        class="no-underline text-white" outlined="true" (click)="comming()">
+        (click)="comming()">
         <span [innerHTML]="icons.download | svg" class="me-3"></span>
         BSFR_Saber_v1.1.saber
       </a>
