--- a/src/app/components/rankedle/rankedle.component.html
+++ b/src/app/components/rankedle/rankedle.component.html
@@ -4,6 +4,6 @@
     <h2>Rankedle</h2>
   </div>
   <p-card
-    styleClass="rounded-md bg-white/0 backdrop-blur-[96px] shadow-lg ring-1 ring-black/20">
+    styleClass="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
   </p-card>
 </div>
