Progression dans la refonte

--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -20,10 +20,7 @@
         !
       </p>
 
-      <a
-        pButton
-        pRipple
-        (click)="comming()">
+      <a pButton pRipple (click)="comming()">
         <span [innerHTML]="icons.download | svg" class="me-3"></span>
         BSFR_Saber_v1.4_Rainbow.saber
       </a>
@@ -40,10 +37,7 @@
         <li>Le poids du fichier a été réduit</li>
       </ul>
 
-      <a
-        pButton
-        pRipple
-        (click)="comming()">
+      <a pButton pRipple (click)="comming()">
         <span [innerHTML]="icons.download | svg" class="me-3"></span>
         BSFR_Saber_v1.4.saber
       </a>
@@ -72,10 +66,7 @@
         encore à toi &lt;3
       </p>
 
-      <a
-        pButton
-        pRipple
-        (click)="comming()">
+      <a pButton pRipple (click)="comming()">
         <span [innerHTML]="icons.download | svg" class="me-3"></span>
         BSFR_Saber_v1.1.saber
       </a>
