--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,5 @@
-<div class="w-full bg-black/80 backdrop-blur-[96px] shadow-lg ring-1 ring-white/10">
+<div
+  class="w-full bg-black/80 backdrop-blur-[96px] shadow-lg ring-1 ring-white/10">
   <div class="max-w-screen-2xl w-full mx-auto px-8 py-12">
     <div
       class="grid md:gap-x-32 md:gap-y-0 gap-y-8 md:grid-flow-col auto-cols-min md:justify-start justify-center whitespace-nowrap">
