--- a/src/app/components/youtube/youtube.component.html
+++ b/src/app/components/youtube/youtube.component.html
@@ -69,9 +69,7 @@
                 allowfullscreen></iframe>
             </div>
             <ng-template #noVideo>
-              <p-messages 
-                [value]="lastVideoNotFound" 
-                [enableService]="false" />
+              <p-messages [value]="lastVideoNotFound" [enableService]="false" />
             </ng-template>
           </div>
           <ng-template #videoLoading>
