--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    background-image: url(/images/background.jpg);
+    background-image: url(/images/background.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
