--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,11 @@
       routerLink="/"
       routerLinkActive=""
       [routerLinkActiveOptions]="{ exact: true }">
-      <img src="images/logo/transparent_animated.gif" alt="Logo BSFR" width="48" height="48" />
+      <img
+        src="images/logo/transparent_animated.webp"
+        alt="Logo BSFR"
+        width="48"
+        height="48" />
     </a>
   </div>
   <div
