--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -111,7 +111,7 @@
     (isOpen ? 'left-0' : '-left-[300px]')
   ">
   <div class="place-self-center">
-    <img src="images/logo/logo.gif" alt="Logo BSFR" width="64" height="64" />
+    <img src="images/logo/transparent_animated.webp" alt="Logo BSFR" width="64" height="64" />
   </div>
   <ul class="list-none p-0 m-0">
     <li>
