Correction de bugs graphiques

--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -21,7 +21,9 @@
       </p>
 
       <a pButton pRipple (click)="comming()">
-        <span [innerHTML]="icons.download | svg" class="me-3"></span>
+        <span
+          [innerHTML]="icons.download | svg"
+          class="flex items-center me-3"></span>
         BSFR_Saber_v1.4_Rainbow.saber
       </a>
     </div>
@@ -38,7 +40,9 @@
       </ul>
 
       <a pButton pRipple (click)="comming()">
-        <span [innerHTML]="icons.download | svg" class="me-3"></span>
+        <span
+          [innerHTML]="icons.download | svg"
+          class="flex items-center me-3"></span>
         BSFR_Saber_v1.4.saber
       </a>
     </div>
@@ -67,7 +71,9 @@
       </p>
 
       <a pButton pRipple (click)="comming()">
-        <span [innerHTML]="icons.download | svg" class="me-3"></span>
+        <span
+          [innerHTML]="icons.download | svg"
+          class="flex items-center me-3"></span>
         BSFR_Saber_v1.1.saber
       </a>
     </div>
