Restriction de pages aux membres du serveur Discord

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,7 +10,7 @@
             <li>
               <a
                 [routerLink]="menuItem.path"
-                class="no-underline text-[var(--surface-400)] hover:text-[var(--primary-color)] transition-all block hover:translate-x-1"
+                class="no-underline text-[var(--primary-color)] transition-all block hover:translate-x-1"
                 >{{ menuItem.label }}</a
               >
             </li>
