--- a/src/app/components/rankedle/rankedle.component.html
+++ b/src/app/components/rankedle/rankedle.component.html
@@ -3,7 +3,10 @@
   <div class="text-white">
     <h2>Rankedle</h2>
   </div>
-  <p-card
-    styleClass="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
-  </p-card>
+  <app-not-bsfr-member *ngIf="!isBSFR; else page" />
+  <ng-template #page>
+    <p-card
+      styleClass="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
+    </p-card>
+  </ng-template>
 </div>
