--- a/src/app/components/carte-interactive/carte-interactive.component.html
+++ b/src/app/components/carte-interactive/carte-interactive.component.html
@@ -7,6 +7,10 @@
   <ng-template #page>
     <p-card
       styleClass="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
+      <!-- <div id="map" style="width: 100%; height: 600px; position: relative; outline: none;" class="leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom" tabindex="0"></div> -->
+      <div style="height: 600px; outline: none;" leaflet [leafletOptions]="options">
+        <div [leafletLayers]="markers"></div>
+      </div>
     </p-card>
   </ng-template>
 </div>
